--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ header{
     display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  direction: row;
 }
 
 html{
@@ -11,6 +12,8 @@ html{
   font-weight: 400;
   color: black;
   font-style: normal;
+  max-width: 1400px;
+  height: 992px;
 }
 
 h1{
@@ -38,16 +41,28 @@ ul{list-style: none;
 
 .section1{
   background-color: #f2f2f2;
+  display: flex;
+  
+  
 }
 
 .cardsheb{
+  display: inline;
   background-color: white;
   border-radius: 20px;
+  width: 246px;
+  height: 199px;
+  direction: row;
+  justify-content: space-between;
+  
 }
 
 .imgheb{
   box-sizing: border-box;
   border: 5px solid #ffffff;
   border-radius: 20px 20px 0px 0px;
+  width: 246px;
+  height: 124px;
+
 
 }
