--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,60 @@ ul {
 
 }
 
-.article1>i{
+.article1>i {
   background: #F2F2F2;
-    border: 1px solid #F2F2F2;
-    border-radius: 15px 0px 0px 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  border: 1px solid #F2F2F2;
+  border-radius: 15px 0px 0px 15px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.article1{
+  display: flex;
+flex-direction: row;
+display: flex;
+flex-direction: row;
+padding: 15px 16px;
+
+
+}
+
+form {
+  background: #FFFFFF;
+  border: 1px solid #F2F2F2;
+  border-radius: 15px;
+  width: 332px;
+  display: flex;
+  flex-direction: row;
+}
+
+form #search {
+  border: none;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+color: black;
+padding: 10px;
+}
+.busearch{
+  background-color: blue;
+  color: #FFFFFF;
+  border: none;
+  display: flex;
+flex-direction: row;
+align-items: center;
+padding: 15px 16px;
+gap: 10px;
+border: 1px solid #0065FC;
+border-radius: 0px 15px 15px 0px;
+flex: none;
+order: 1;
+flex-grow: 0;
+text-align: center;
+font-weight: 700;
+}
 /*.section1{
   background-color: #f2f2f2;
   display: flex;
