--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ nav ul {
 .container {
   max-width: 1400px;
   height: 992px;
+  margin: 44px 50px 0 50px;
 }
 
 h1 {
@@ -84,23 +85,18 @@ ul {
   justify-content: center;
 }
 
-.article1{
+.article1 {
   display: flex;
-flex-direction: row;
-display: flex;
-flex-direction: row;
-padding: 15px 16px;
-
-
+  width: 368px;
+  height: 49px;
 }
 
 form {
   background: #FFFFFF;
   border: 1px solid #F2F2F2;
-  border-radius: 15px;
-  width: 332px;
+  width: 236px;
   display: flex;
-  flex-direction: row;
+
 }
 
 form #search {
@@ -108,26 +104,27 @@ form #search {
   align-items: center;
   justify-content: center;
   display: flex;
-color: black;
-padding: 10px;
+  color: black;
+  padding-left: 10px;
 }
-.busearch{
+
+form #search::placeholder {
+  color: black;
+  font-weight: 700;
+}
+
+.busearch {
   background-color: blue;
   color: #FFFFFF;
-  border: none;
   display: flex;
-flex-direction: row;
-align-items: center;
-padding: 15px 16px;
-gap: 10px;
-border: 1px solid #0065FC;
-border-radius: 0px 15px 15px 0px;
-flex: none;
-order: 1;
-flex-grow: 0;
-text-align: center;
-font-weight: 700;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #0065FC;
+  border-radius: 0px 15px 15px 0px;
+  font-weight: 700;
+  width: 132px;
 }
+
 /*.section1{
   background-color: #f2f2f2;
   display: flex;
