--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ form #search::placeholder {
   font-weight: 700;
 }
 
-.hebpop>p{
+.hebpop>p {
 
   display: flex;
   align-items: center;
@@ -203,32 +203,39 @@ form #search::placeholder {
   margin-right: 11px;
 }
 
-.section1{
+.section1 {
   background-color: #f2f2f2;
   display: flex;
-    
-}
-#col{ column-count: 3;
+  width: 880px;
+  height: 626px;
+  border-radius: 20px;
 
 }
 
-.section1>h1{
+#col {
+  column-count: 3;
+  column-gap: 31px;
+   
+}
+
+.section1>h1 {
   display: flex;
   align-items: flex-start;
 }
 
-.section1 .cardsheb{
+.section1 .cardsheb {
   display: inline-table;
   background-color: white;
   border-radius: 20px;
   width: 246px;
   height: 199px;
   direction: unset;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  margin:23px 15.5px 40px 15.5px;
 
-  
 }
 
-.imgheb{
+.imgheb {
   box-sizing: border-box;
   border: 5px solid #ffffff;
   border-radius: 20px 20px 0px 0px;
@@ -237,19 +244,20 @@ form #search::placeholder {
 
 
 }
-.section1 .titlecard{
+
+.section1 .titlecard {
 
   margin-top: 4px;
   margin-left: 16px;
 }
 
-.section1 .content>p{
+.section1 .content>p {
 
   margin-top: -9px;
   margin-left: 16px;
 }
 
-.section1 .notes{
+.section1 .notes {
 
   margin-top: -9px;
   margin-left: 16px;
@@ -261,7 +269,15 @@ form #search::placeholder {
 }
 
 
-.empty-star{
+.empty-star {
 
   color: #D9D9D9;
+}
+
+.section1 .showmore{
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+  font-size: 20px;
+  margin-left: 15px;
 }
