--- a/css/style.css
+++ b/css/style.css
@@ -209,14 +209,18 @@ form #search::placeholder {
   width: 880px;
   height: 626px;
   border-radius: 20px;
-
 }
 
 #col {
-  column-count: 3;
-  column-gap: 31px;
-   
+  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+    min-width: 100%;
 }
+
 
 .section1>h1 {
   display: flex;
@@ -232,7 +236,6 @@ form #search::placeholder {
   direction: unset;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   margin:23px 15.5px 40px 15.5px;
-
 }
 
 .imgheb {
