--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,7 @@ form #search::placeholder {
   width: 880px;
   height: 626px;
   border-radius: 20px;
+  flex-direction: column;
 }
 
 #col {
@@ -225,6 +226,7 @@ form #search::placeholder {
 .section1>h1 {
   display: flex;
   align-items: flex-start;
+  margin: 42px 0 0 40px;
 }
 
 .section1 .cardsheb {
@@ -282,5 +284,5 @@ form #search::placeholder {
   color: black;
   font-weight: 700;
   font-size: 20px;
-  margin-left: 15px;
+  margin: 0 0 46px 44px;
 }
