--- a/css/style.css
+++ b/css/style.css
@@ -216,16 +216,17 @@ form #search::placeholder {
 
 #col {
   display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: stretch;
-    align-content: stretch;
-    min-width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
+  min-width: 100%;
 }
-.cardsheb>a{
-text-decoration: none;
-color: black;
+
+.cardsheb>a {
+  text-decoration: none;
+  color: black;
 }
 
 .section1>h1 {
@@ -242,7 +243,7 @@ color: black;
   height: 199px;
   direction: unset;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-  margin:23px 15.5px 40px 15.5px;
+  margin: 23px 15.5px 40px 15.5px;
 }
 
 .imgheb {
@@ -284,7 +285,7 @@ color: black;
   color: #D9D9D9;
 }
 
-.section1 .showmore{
+.section1 .showmore {
   text-decoration: none;
   color: black;
   font-weight: 700;
@@ -292,13 +293,13 @@ color: black;
   margin: -10px 0 46px 44px;
 }
 
-.showmore>a{
+.showmore>a {
   text-decoration: none;
   color: black;
 }
 
 
-.morefamous{
+.morefamous {
   width: 420px;
   height: 625px;
   background: #F2F2F2;
@@ -306,15 +307,15 @@ color: black;
   margin: 0 50px 0 40px;
 }
 
-.morefamous>h3{
+.morefamous>h3 {
   font-weight: 700;
   display: inline-block;
-    margin: 41px 59px -42px 37px;
-    align-items: center;
-    justify-content: space-between;
+  margin: 41px 59px -42px 37px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.morefamous .fa-chart-line{
+.morefamous .fa-chart-line {
   width: 18px;
   height: 15px;
   color: #0065FC;
@@ -326,36 +327,37 @@ color: black;
   margin-left: 169px;
 }
 
-.morefamous .cards{
+.morefamous .cards {
   width: 343px;
   height: 144px;
   background: #FFFFFF;
   border-radius: 20px;
   display: flex;
   margin: 28px 40px 33px 37px;
-  filter: drop-shadow(0px 3px 15px rgba(0,0,0,0.1));
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
- .imgpop{
+.imgpop {
   width: 137px;
   height: 144px;
   box-sizing: border-box;
   border: 5px solid #FFFFFF;
   border-radius: 20px 0 0 20px;
 }
-.morefamous .content{
+
+.morefamous .content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.morefamous .notes{
+.morefamous .notes {
   color: #0065FC;
   margin: -44px 123px 12px 15px;
   display: flex;
 }
 
-.morefamous .titlecard{
+.morefamous .titlecard {
   font-weight: 700;
   width: 169px;
   height: 38px;
@@ -363,28 +365,71 @@ color: black;
   margin: 16px 22px 7px 15px;
 }
 
-.morefamous .content>p{
+.morefamous .content>p {
 
-font-weight: 400;
-width: 169px;
-height: 15px;
-margin: 0 22px 68px 15px;
+  font-weight: 400;
+  width: 169px;
+  height: 15px;
+  margin: 0 22px 68px 15px;
 }
 
-.all{
+.all {
   display: -webkit-box;
   width: 100%;
 }
-
-.activity>h3{
+.blocactiv{
+  display: flex;
+  justify-content: space-between;
+  margin-left: -50px;
+}
+.activity>h3 {
   font-weight: 700;
 }
-
-.activcard>img{
+.activcard{
+  margin: 18.47px 0 61px 50px;
+}
+.activcard>img {
   border-radius: 20px;
   width: 302px;
   height: 444px;
-  filter: drop-shadow( 0px 3px 15px rgba(0,0,0,0.1));
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
+.activcard .titlecard {
+  background: #FFFFFF;
+  border-radius: 0px 0px 20px 20px;
+  width: 284px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  height: 56px;
+  display: flex;
+  align-items: center;
+  margin-top: -59px;
+  padding-left: 19px;
+}
 
+footer{
+  display: flex;
+  flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    text-align: justify;
+    background: #F2F2F2;
+    height: 225px;
+    width: 1339px;
+    padding: 30px 50px 50px 50px;
+}
+
+.footer{
+  margin-top: 45px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+footer .footer>h2{
+  margin-left: 41px;
+}
+
+.footer li{
+  margin: 0 0 12px 0;
+}
