--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ form #search::placeholder {
   font-weight: 700;
 }
 
-.busearch {
+#busearch {
   background-color: blue;
   color: #FFFFFF;
   display: flex;
@@ -186,14 +186,14 @@ form #search::placeholder {
   font-weight: 700;
 }
 
-.hebpop>p {
+.hebpop label {
 
-  display: flex;
+  display: inline-flex;
   align-items: center;
   margin-top: 20px;
 }
 
-.hebpop>p>i {
+.hebpop label>i {
 
   color: #0065FC;
   border: 1px solid #D9D9D9;
@@ -436,16 +436,116 @@ footer .footer>h2{
 }
 
 
-@media screen (max-width:767px)
+@media screen (max-width:767px){}
 
-.container{
-  width: 375px;
-  
+
+ 
+header{
+  flex-direction: column;
+  align-items: center;
+}
+#logo img{
+  margin-bottom: 40px;
+}
+ nav ul{
+  width: 100%;
+  justify-content: center;
+}
+nav ul{
+  max-width: none;
+  flex: 1;
+}
+nav li{
+  width: 100%;
+  padding-bottom: 10px;
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
+  border-bottom: solid #F2F2F2 3px;
+}
+nav li:hover{
+  border-top: none;
+  border-bottom: solid #0065FC 3px;
+  margin: 0;
 }
 
-nav {
-  display: block;
-  justify-content: space-between;
-  align-items: center;
 
+h1,h2, #search_filters{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#search_filters{
+  padding-bottom: 40px;
+}
+#search-section form{
+  justify-content: center;
+}
+#search-section__input-search{
+  padding: 0 20px;
+}
+#search-section__input-submit{
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  position: relative;
+  right: 20px;
+}
+#search-section__input-submit__loupe{
+  display: block;
+}
+#search-section__input-submit__span-research{
+  display: none;
+}
+
+#lodging, #popular{
+  margin: 0;
+  border-radius: 0;
+  padding: 20px 10px 40px 10px;
+}
+.lodging-popular__cards-container__card__main h3, .popular__cards-container__card__main h3{
+  font-size: 17px;
+}
+.lodging-popular__cards-container__card__main p, .popular__cards-container__card__main p{
+  font-size: 15px;
+}
+.lodging-popular__cards-container__card__main span i, .popular__cards-container__card__main span i{
+  font-size: 13px;
+}
+#popular__cards-container article{
+  margin: 15px;
+}
+.popular__cards-container__card{
+  height: 150px;
+}
+
+#lodging{
+  background-color: white;
+}
+#lodging__cards-container{
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+#lodging__cards-container article{
+  max-width: none;
+}
+
+#activitys h2{
+  margin-left: 15px;
+}
+#activitys__cards-container{
+  flex-direction: column;
+  height: auto;
+  margin: 0 20px;
+}
+.activitys__cards-container__article-size{
+  width: 100%;
+  margin: 0;
+}
+.activitys__cards-container__article-size img{
+  height: calc(90% - 40px);
+}
+.card-activity, .activitys__cards-container__article-size .card-activity-small, #card-activity--very-small,  #card-activity--midle{
+  height: 200px;
+  margin: 20px 0;
+  width: 100%;
 }
