--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,12 @@ form #search::placeholder {
   margin-right: 11px;
 }
 
+
+.hebpop>h2{
+  font-weight: 400;
+display: inline-block;
+}
+
 .section1 {
   background-color: #f2f2f2;
   display: flex;
@@ -443,6 +449,7 @@ footer .footer>h2{
 header{
   flex-direction: column;
   align-items: center;
+
 }
 #logo img{
   margin-bottom: 40px;
@@ -450,6 +457,7 @@ header{
  nav ul{
   width: 100%;
   justify-content: center;
+  margin-left: 11px;
 }
 nav ul{
   max-width: none;
@@ -478,26 +486,26 @@ h1,h2, #search_filters{
 #search_filters{
   padding-bottom: 40px;
 }
-#search-section form{
+.searching{
   justify-content: center;
 }
-#search-section__input-search{
+.searching__input-search{
   padding: 0 20px;
 }
-#search-section__input-submit{
+.searching__input-submit{
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
   position: relative;
   right: 20px;
 }
-#search-section__input-submit__loupe{
+.searching__input-submit__loupe{
   display: block;
 }
-#search-section__input-submit__span-research{
+.searching__input-submit__span-research{
   display: none;
 }
 
-#lodging, #popular{
+.hebpop, .morefamous{
   margin: 0;
   border-radius: 0;
   padding: 20px 10px 40px 10px;
@@ -518,7 +526,7 @@ h1,h2, #search_filters{
   height: 150px;
 }
 
-#lodging{
+.hebpop{
   background-color: white;
 }
 #lodging__cards-container{
