--- a/css/style.css
+++ b/css/style.css
@@ -461,118 +461,7 @@ footer .footer>h2 {
 }
 
 
-/*@media screen (max-width:767px){body}
-
- 
-header{
-  flex-direction: column;
-  align-items: center;
-
+@media screen and (max-width : 992px){
+  
 }
-#logo img{
-  margin-bottom: 40px;
-}
- nav ul{
-  width: 100%;
-  justify-content: center;
-  margin-left: 11px;
-}
-nav ul{
-  max-width: none;
-  flex: 1;
-}
-nav li{
-  width: 100%;
-  padding-bottom: 10px;
-  margin: 0;
-  padding-left: 0;
-  padding-right: 0;
-  border-bottom: solid #F2F2F2 3px;
-}
-nav li:hover{
-  border-top: none;
-  border-bottom: solid #0065FC 3px;
-  margin: 0;
-}
-
-
-h1,h2, #search_filters{
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-#search_filters{
-  padding-bottom: 40px;
-}
-.searching{
-  justify-content: center;
-}
-.searching__input-search{
-  padding: 0 20px;
-}
-.searching__input-submit{
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-  position: relative;
-  right: 20px;
-}
-.searching__input-submit__loupe{
-  display: block;
-}
-.searching__input-submit__span-research{
-  display: none;
-}
-
-.hebpop, .morefamous{
-  margin: 0;
-  border-radius: 0;
-  padding: 20px 10px 40px 10px;
-}
-.lodging-popular__cards-container__card__main h3, .popular__cards-container__card__main h3{
-  font-size: 17px;
-}
-.lodging-popular__cards-container__card__main p, .popular__cards-container__card__main p{
-  font-size: 15px;
-}
-.lodging-popular__cards-container__card__main span i, .popular__cards-container__card__main span i{
-  font-size: 13px;
-}
-#popular__cards-container article{
-  margin: 15px;
-}
-.popular__cards-container__card{
-  height: 150px;
-}
-
-.hebpop{
-  background-color: white;
-}
-#lodging__cards-container{
-  flex-wrap: nowrap;
-  flex-direction: column;
-}
-#lodging__cards-container article{
-  max-width: none;
-}
-
-.activity h2{
-  margin-left: 15px;
-}
-.activity{
-  flex-direction: column;
-  height: auto;
-  margin: 0 20px;
-}
-.activity{
-  width: 100%;
-  margin: 0;
-}
-.activcard img{
-  height: calc(90% - 40px);
-}
-.activcard{
-  height: 200px;
-  margin: 20px 0;
-  width: 100%;
-}
-*/
+  
