--- a/css/style.css
+++ b/css/style.css
@@ -493,5 +493,42 @@ footer .footer>h2 {
   .article2{
     margin: 12px 0 0 0;
   }
+
+  .hebpop{
+    padding: 0px 0px 0px 72px;
+  }
+
+  .all {
+    display: contents;
+    width: 100%;
+    padding: 39px 0 0 0;
+  }
+
+  .section1{
+    padding: 39px 72px 0 72px;
+  }
+
+  .morefamous {
+    width: 883px;
+    height: 278px;
+    background: #F2F2F2;
+    border-radius: 20px;
+    margin: 53px 71px 0 70px;
+  }
+
+  .morefamous>h3{
+    margin: 34px 0px 0px 40px;
+  }
+
+  .morefamous .fa-chart-line{
+    margin:-29px 40px 0 579px ;
+  }
+
+  .morefamous .cards{
+    width: 252px;
+    height: 144px;
+    display: inline-flex;
+    margin: 21px -16px -3px 38px;
+  }
 }
   
