--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ form #search::placeholder {
   margin-top: 17px;
 }
 
-#search_filters .Filtres{
+#search_filters .Filtres {
   font-weight: 700;
   text-align: center;
 }
@@ -191,32 +191,34 @@ form #search::placeholder {
   white-space: nowrap;
 }
 
-.hebpop{
+.hebpop {
   padding: 0px 50px 0px 50px;
 }
-
-.hebpop label {
-
-  display: inline-flex;
+#infos{
+  display: flex;
+  width: 489px;
+  height: 24px;
+  padding: 35px 934px 37px 59px;
   align-items: center;
-  margin-top: 20px;
 }
 
-.hebpop label>i {
+
+#infos label i {
 
   color: #0065FC;
   border: 1px solid #D9D9D9;
   border-radius: 24px;
   width: 24px;
   height: 24px;
-  display: flex;
   justify-content: center;
-  align-items: center;
   margin-right: 11px;
+  display: inline-flex;
+  align-items: center;
+
 }
 
 
-.hebpop>h2 {
+#infos>h2 {
   font-weight: 400;
   display: inline-block;
 }
@@ -395,7 +397,7 @@ form #search::placeholder {
   padding: 39px 0 0 0;
 }
 
-.activity{
+.activity {
   padding: 60px 53px 0 50px;
 }
 
@@ -461,7 +463,7 @@ footer .footer>h2 {
 }
 
 
-@media screen and (max-width : 992px){
+@media screen and (max-width : 992px) {
   #logo img {
     width: 61.09px;
     height: 19px;
@@ -475,7 +477,7 @@ footer .footer>h2 {
     width: 224px;
     padding: 48px 72px 0 1046px;
   }
-  
+
   main #search_filters h1 {
     padding: 58px 0 0 72px;
     width: 580px;
@@ -486,15 +488,15 @@ footer .footer>h2 {
     font-weight: 400;
   }
 
-  .searching{
+  .searching {
     margin: 0 0 0 74px;
   }
 
-  .article2{
+  .article2 {
     margin: 12px 0 0 0;
   }
 
-  .hebpop{
+  .hebpop {
     padding: 0px 0px 0px 72px;
   }
 
@@ -504,8 +506,8 @@ footer .footer>h2 {
     padding: 39px 0 0 0;
   }
 
-  .section1{
-    padding: 39px 72px 0 72px;
+  .section1 {
+    margin: 39px 72px 39px 72px;
   }
 
   .morefamous {
@@ -516,19 +518,18 @@ footer .footer>h2 {
     margin: 53px 71px 0 70px;
   }
 
-  .morefamous>h3{
+  .morefamous>h3 {
     margin: 34px 0px 0px 40px;
   }
 
-  .morefamous .fa-chart-line{
-    margin:-29px 40px 0 579px ;
+  .morefamous .fa-chart-line {
+    margin: -29px 40px 0 579px;
   }
 
-  .morefamous .cards{
+  .morefamous .cards {
     width: 252px;
     height: 144px;
     display: inline-flex;
     margin: 21px -16px -3px 38px;
   }
 }
-  
