--- a/css/style.css
+++ b/css/style.css
@@ -236,10 +236,12 @@ form #search::placeholder {
   color: black;
 }
 
-.section1>h1 {
+.section1>h2 {
   display: flex;
   align-items: flex-start;
   margin: 42px 0 0 40px;
+  font-weight: 700;
+  font-size: 22px;
 }
 
 .section1 .cardsheb {
@@ -450,10 +452,10 @@ footer ul {
 
 
 @media screen and (max-width : 992px) {
-  body{
+  body {
     max-width: max-content;
   }
-  
+
   #logo img {
     width: 61.09px;
     height: 19px;
@@ -543,9 +545,9 @@ footer ul {
 
 @media screen and (max-width : 768px) {
 
-body{
-  max-width:max-content;
-}
+  body {
+    max-width: max-content;
+  }
 
   header {
     align-items: center;
