--- a/css/style.css
+++ b/css/style.css
@@ -557,9 +557,35 @@ footer ul {
   header {
     align-items: center;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    width: 100%;
   }
 
+
+  #logo img {
+    margin-bottom: 40px;
+  }
+
+  .menu {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
+
+  .menu .link {
+    width: 100%;
+    padding-bottom: 10px;
+    border-bottom: solid #F2F2F2 3px;
+  }
+
+  .menu .link:hover {
+    border-top: none;
+    border-bottom: solid #0065FC 3px;
+    margin: 0;
+  }
+
+  #search_filters {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-bottom: 40px;
+  }
 }
