--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ input[type="submit" i] {
   border-radius: 20px 20px 0px 0px;
   width: 246px;
   height: 124px;
+  object-fit: cover;
 
 
 }
@@ -392,8 +393,9 @@ input[type="submit" i] {
   justify-content: space-between;
 }
 
-.activity>h3 {
+.activity>h2 {
   font-weight: 700;
+  font-size: 22px;
 }
 
 .activcard>img {
@@ -621,6 +623,30 @@ footer ul {
     justify-content: flex-start;
     align-items: center;
   }
+
+#infos{
+  width: 298px;
+}
+
+
+.all{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.section1{
+  border-radius: inherit;
+background-color: #FFFFFF;
+
+}
+
+.morefamous{
+
+  width: 100%;
+  height: 580px;
+  border-radius: inherit;
+  margin: 0;
+}
 
   }
 
