--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ footer ul {
   }
 
   .container {
-    margin: 21px 22px 0 20px;
+    margin: 21px 22px 0 0;
   }
 
   header {
@@ -591,7 +591,7 @@ footer ul {
     padding-bottom: 40px;
   }
 
-  input[type="submit" i]{
+  input[type="submit" i] {
     visibility: hidden;
     display: none;
   }
@@ -608,9 +608,9 @@ footer ul {
     border-radius: 0px 15px 15px 0px;
     font-weight: 700;
     width: 49px;
-}
+  }
 
-.article2 {
+  .article2 {
     align-items: flex-start;
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -622,33 +622,74 @@ footer ul {
     align-content: stretch;
     justify-content: flex-start;
     align-items: center;
+    width: 375px;
   }
 
-#infos{
-  width: 298px;
-}
+  #infos {
+    width: 298px;
+  }
 
+  .all {
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 
-.all{
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.section1{
-  border-radius: inherit;
-background-color: #FFFFFF;
-
-}
-
-.morefamous{
-
-  width: 100%;
-  height: 580px;
-  border-radius: inherit;
-  margin: 0;
-}
+  .section1 {
+    border-radius: inherit;
+    background-color: #FFFFFF;
 
   }
 
- 
-  
+  #col {
+    flex-direction: column;
+  }
+
+  .morefamous {
+
+    width: 375px;
+    height: 580px;
+    border-radius: inherit;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .blocactiv{
+    display: flex;
+    flex-direction: column;
+  }
+
+.activcard .titlecard{
+  width: 315px;
+}
+
+  .activcard>img{
+    width: 334px;
+    height: 190px;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 375px;
+    height: 501px;
+    
+  }
+
+  .footer{
+    margin: 0;
+  }
+
+  footer .footer>h2{
+    width: 77px;
+    height: 21px;
+    font-size: 18px;
+  }
+}
